kotlin-ide/idea/testData/multiplatform/duplicateActualsOneWithStrongIncompatibility/top/top.kt
package foo

expect fun <!LINE_MARKER("descr='Has actuals in common'")!>foo<!>(): Int